--- a/System_do_zarzadzania_obslugi_sprzedazy/InvoiceDetails.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/InvoiceDetails.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
         Title="InvoiceDetails" Height="450" Width="800" ResizeMode="NoResize">
-    <Grid>
+    <Grid Margin="0,-11,-54,-43">
 
         <Label Content="ID" HorizontalAlignment="Left" Height="37" Margin="10,81,0,0"  VerticalAlignment="Top" Width="54" />
         <Label Content="ID Sprzedawcy" HorizontalAlignment="Left" Height="37" Margin="10,39,0,0"  VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.504,0.045" />
