--- a/System_do_zarzadzania_obslugi_sprzedazy/NewInvoice.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/NewInvoice.xaml
@@ -5,39 +5,36 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
-        Title="NewInvoice" Height="1100" Width="1280">
-    <Grid>
-        <StackPanel>
-            <Label Content="ID" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="ID Sprzedawcy" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="ID Firmy" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="ID Produktu" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Numer" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Data stworzenia" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Data sprzedaży" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Typ płatności" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Termin płatności" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Do zapłaty" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Słownie do zapłaty" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
-            <Label Content="Uwagi" HorizontalAlignment="Left" Height="37" Margin="276,41,0,0"  VerticalAlignment="Top" Width="200" />
+        Title="NewInvoice" Height="792.5" Width="1280">
+    <Grid Margin="-24,-31,-35,-21">
 
-        </StackPanel>
-        <StackPanel>
-            <TextBox x:Name="ID" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="IdSeller" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="IdCompany" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="IdProduct" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="Number" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="CreationDate" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="SaleDate" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="PaymentType" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="PaymentDeadline" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="ToPay" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="ToPayInWord" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="Paid" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-            <TextBox x:Name="Remarks" HorizontalAlignment="Center" Height="37" Margin="276,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="430"/>
-        </StackPanel>
-        <Button x:Name="AddInvoice" Content="Dodaj" Width="100" Height="100" Margin="1038,861,134,108" Click="AddInvoice_Click"/>
+        <Label Content="ID Sprzedawcy" HorizontalAlignment="Left" Height="36" Margin="90,76,0,0"  VerticalAlignment="Top" Width="100" />
+        <Label Content="ID Firmy" HorizontalAlignment="Left" Height="38" Margin="90,168,0,0"  VerticalAlignment="Top" Width="100" />
+        <Label Content="ID Produktu" HorizontalAlignment="Left" Height="37" Margin="90,251,0,0"  VerticalAlignment="Top" Width="100" />
+        <Label Content="Numer" HorizontalAlignment="Left" Height="37" Margin="90,347,0,0"  VerticalAlignment="Top" Width="100" />
+        <Label Content="Data stworzenia" HorizontalAlignment="Left" Height="37" Margin="90,444,0,0"  VerticalAlignment="Top" Width="100" />
+        <Label Content="Data sprzedaży" HorizontalAlignment="Left" Height="37" Margin="90,542,0,0"  VerticalAlignment="Top" Width="100" />
+        <Label Content="Typ płatności" HorizontalAlignment="Left" Height="37" Margin="678,76,0,0"  VerticalAlignment="Top" Width="102" />
+        <Label Content="Termin płatności" HorizontalAlignment="Left" Height="37" Margin="678,168,0,0"  VerticalAlignment="Top" Width="102" />
+        <Label Content="Do zapłaty" HorizontalAlignment="Left" Height="37" Margin="678,251,0,0"  VerticalAlignment="Top" Width="78" />
+        <Label Content="Słownie do zapłaty" HorizontalAlignment="Left" Height="37" Margin="678,347,0,0"  VerticalAlignment="Top" Width="120" />
+        <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="678,444,0,0"  VerticalAlignment="Top" Width="78" />
+        <Label Content="Uwagi" HorizontalAlignment="Left" Height="37" Margin="678,541,0,0"  VerticalAlignment="Top" Width="62" />
+
+
+
+        <TextBox x:Name="IdSeller" HorizontalAlignment="Center" Height="37" Margin="221,75,684,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="367"/>
+        <TextBox x:Name="IdCompany" HorizontalAlignment="Center" Height="37" Margin="221,168,684,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="367"/>
+        <TextBox x:Name="IdProduct" HorizontalAlignment="Center" Height="37" Margin="221,251,684,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="367"/>
+        <TextBox x:Name="Number" HorizontalAlignment="Center" Height="37" Margin="221,347,684,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="367"/>
+        <TextBox x:Name="CreationDate" HorizontalAlignment="Center" Height="37" Margin="221,444,684,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="367"/>
+        <TextBox x:Name="SaleDate" HorizontalAlignment="Center" Height="38" Margin="221,541,684,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="367"/>
+        <TextBox x:Name="PaymentType" HorizontalAlignment="Center" Height="37" Margin="824,75,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <TextBox x:Name="PaymentDeadline" HorizontalAlignment="Center" Height="37" Margin="824,168,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <TextBox x:Name="ToPay" HorizontalAlignment="Center" Height="37" Margin="824,251,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <TextBox x:Name="ToPayInWord" HorizontalAlignment="Center" Height="37" Margin="824,347,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <TextBox x:Name="Paid" HorizontalAlignment="Center" Height="37" Margin="824,444,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <TextBox x:Name="Remarks" HorizontalAlignment="Center" Height="37" Margin="824,541,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <Button x:Name="AddInvoice" HorizontalAlignment="Stretch" Content="Dodaj" Margin="578,0,596,85" Click="AddInvoice_Click" Height="56" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
