--- a/System_do_zarzadzania_obslugi_sprzedazy/ConfigFiles/App.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/ConfigFiles/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Winows/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
