--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
@@ -77,11 +77,10 @@
         <Button x:Name="AddUser" Content="Dodaj Firmę" HorizontalAlignment="Left" Margin="5,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Add_User"/>
         <Button Content="Usuń Firmę" HorizontalAlignment="Left" Margin="114,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
         <Button x:Name="refresh" Content="Odśwież" HorizontalAlignment="Left" Margin="223,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="refresh_Click"/>
-        <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="930,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open"/>
-        <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1039,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
-        <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1148,11,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open" Grid.RowSpan="2"/>
+        <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="1039,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open" RenderTransformOrigin="0.481,-0.462"/>
+        <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1148,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
         <Grid HorizontalAlignment="Left" Height="475" Margin="330,6,0,0" Grid.Row="3" VerticalAlignment="Top" Width="922">
-            <DataGrid Name="CompanyDataGrid" AutoGenerateColumns="True" GridLinesVisibility="None" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False"/>
+            <DataGrid Name="CompanyDataGrid" AutoGenerateColumns="True" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False"/>
         </Grid>
     </Grid>
 </Window>
