--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/NewInvoice.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/NewInvoice.xaml
@@ -19,7 +19,7 @@
         <Label Content="Do zapłaty" HorizontalAlignment="Left" Height="37" Margin="678,251,0,0"  VerticalAlignment="Top" Width="78" />
         <Label Content="Słownie do zapłaty" HorizontalAlignment="Left" Height="37" Margin="678,347,0,0"  VerticalAlignment="Top" Width="120" />
         <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="678,444,0,0"  VerticalAlignment="Top" Width="78" />
-        <Label Content="Uwagi" HorizontalAlignment="Left" Height="37" Margin="678,541,0,0"  VerticalAlignment="Top" Width="62" />
+        <Label Content="Data wydania" HorizontalAlignment="Left" Height="37" Margin="678,541,0,0"  VerticalAlignment="Top" Width="102" />
 
 
 
@@ -34,7 +34,7 @@
         <TextBox x:Name="ToPay" HorizontalAlignment="Center" Height="37" Margin="824,251,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
         <TextBox x:Name="ToPayInWord" HorizontalAlignment="Center" Height="37" Margin="824,347,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
         <TextBox x:Name="Paid" HorizontalAlignment="Center" Height="37" Margin="824,444,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
-        <TextBox x:Name="Remarks" HorizontalAlignment="Center" Height="37" Margin="824,541,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
+        <TextBox x:Name="DateOfIssue" HorizontalAlignment="Center" Height="37" Margin="824,541,39,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="409"/>
         <Button x:Name="AddInvoice" HorizontalAlignment="Stretch" Content="Dodaj" Margin="578,0,596,85" Click="AddInvoice_Click" Height="56" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
