--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/DebtorWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/DebtorWindow.xaml
@@ -5,10 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy.Winows"
         mc:Ignorable="d"
-        Title="DebtorWindow" Height="450" Width="800">
+        Title="DebtorWindow" Height="600" Width="1000">
     <Grid>
-        <DataGrid x:Name="DebtorInvoice" HorizontalAlignment="Left" Height="371" Margin="239,25,0,0" VerticalAlignment="Top" Width="520"/>
-        <Button x:Name="ClientPDF" Content="Stwórz PDF" HorizontalAlignment="Left" Height="54" Margin="58,69,0,0" VerticalAlignment="Top" Width="130" Click="ClientPDF_Click" />
+        <DataGrid x:Name="DebtorInvoice" AutoGenerateColumns="False" ItemsSource="{Binding debterDictionary}" HorizontalAlignment="Left" Height="534" Margin="239,25,0,0" VerticalAlignment="Top" Width="743" Background="White" SelectionMode="Single" GridLinesVisibility="None" Grid.Row="2"  Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False" RowDetailsVisibilityMode="Visible">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Numer faktury" Binding="{Binding Key}"/>
+                <DataGridTextColumn Header="Dług" Binding="{Binding Value}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="ClientPDF" Content="Stwórz PDF" HorizontalAlignment="Left" Height="54" Margin="58,217,0,0" VerticalAlignment="Top" Width="130"  Click="ClientPDF_Click" />
 
     </Grid>
 </Window>
