--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/InvoiceDetails.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/InvoiceDetails.xaml
@@ -9,7 +9,7 @@
     <Grid Margin="0,-11,-80,-59" Height="761" VerticalAlignment="Top" HorizontalAlignment="Left" Width="1354">
 
         <Label Content="ID" HorizontalAlignment="Left" Height="37" Margin="15,81,0,0"  VerticalAlignment="Top" Width="54" />
-        <Label Content="Sprzedawca" HorizontalAlignment="Left" Height="37" Margin="15,39,0,0"  VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.504,0.045" />
+        <Label Content="Kontrahent" HorizontalAlignment="Left" Height="37" Margin="15,39,0,0"  VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.504,0.045" />
         <Label Content="Firma" HorizontalAlignment="Left" Height="37" Margin="15,123,0,0"  VerticalAlignment="Top" Width="54" />
         <Label Content="Data wydania" HorizontalAlignment="Left" Height="37" Margin="15,501,0,0"  VerticalAlignment="Top" Width="89" />
         <Label Content="Numer" HorizontalAlignment="Left" Height="37" Margin="15,165,0,0"  VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.549,0.046" />
@@ -43,6 +43,8 @@
         <Button x:Name="AddProduct" Content="Dodawanie" HorizontalAlignment="Left" Margin="419,103,0,0" VerticalAlignment="Top" Width="133" Height="50" Click="AddProduct_Click"/>
         <Button x:Name="DelProduct" Content="Usuwanie" HorizontalAlignment="Left" Margin="419,168,0,0" VerticalAlignment="Top" Width="133" Height="50" Click="DelProduct_Click"/>
         <Button x:Name="CreatePDF" Content="Utwórz PDF" HorizontalAlignment="Left" Margin="419,235,0,0" VerticalAlignment="Top" Width="133" Height="50" Click="CreatePDF_Click"/>
+        <CheckBox x:Name="EditPdfCB" Content="Wprowadź korektę" HorizontalAlignment="Left" Margin="419,303,0,0" VerticalAlignment="Top" Height="25" Width="147" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
+        <Button x:Name="CreateEditedPdf" Content="Generuj PDF po korekcie" Visibility="Hidden" HorizontalAlignment="Left" Margin="419,235,0,0" VerticalAlignment="Top" Width="133" Height="51" Click="CreateEditedPdf_Click"/>
 
     </Grid>
 </Window>
